==> MikroElektronika/mikrosdk_v2/sdk/targets/avr_8bit/mikroe/avr/src/uart/implementation_2/hal_ll_uart.c <==
#include "hal_ll_gpio.h"
#include "hal_ll_core.h"
#include "hal_ll_uart.h"
#include "hal_ll_uart_pin_map.h"
#define HAL_LL_UART_CTRLB_RXEN_BIT        (4)
#define HAL_LL_UART_CTRLB_TXEN_BIT        (3)
#define HAL_LL_UART_CTRLA_RXCINTLVL_SHIFT (4)
#define HAL_LL_UART_CTRLA_TXCINTLVL_SHIFT (2)
#define HAL_LL_UART_INTERRUPT_LEVEL_OFF   (0x0)
#define HAL_LL_UART_INTERRUPT_LEVEL_LO    (0x1)
#define HAL_LL_UART_INTERRUPT_LEVEL_MED   (0x2)
#define HAL_LL_UART_INTERRUPT_LEVEL_HI    (0x3)
#define HAL_LL_UART_BAUD_RATE_MUL         (16)
#define HAL_LL_UART_BAUD_RATE_MUL_CLK2X   (8)
#define HAL_LL_UART_CTRLB_CLK2X_BIT       (2)
#define HAL_LL_UART_SBMODE_SHIFT          (3)
#define HAL_LL_UART_SBMODE_ONE            (0)
#define HAL_LL_UART_SBMODE_TWO            (1)
#define HAL_LL_UART_PMODE_SHIFT           (4)
#define HAL_LL_UART_PARITY_NONE           (0)
#define HAL_LL_UART_PARITY_EVEN           (2)
#define HAL_LL_UART_PARITY_ODD            (3)
#define HAL_LL_UART_CHSIZE_5BIT           (0)
#define HAL_LL_UART_CHSIZE_6BIT           (1)
#define HAL_LL_UART_CHSIZE_7BIT           (2)
#define HAL_LL_UART_CHSIZE_8BIT           (3)
#define HAL_LL_UART_CHSIZE_9BIT           (7)
#define ASCII_START_OF_TEXT               (2)
#define HAL_LL_UART_TRIGGER_INTERRUPT     (ASCII_START_OF_TEXT)
#define HAL_LL_UART_STATUS_RXCIF_BIT      (7)
#define HAL_LL_UART_STATUS_TXCIF_BIT      (6)
#define HAL_LL_UART_STATUS_DREIF_BIT      (5)
#define HAL_LL_PMIC_CTRL_HILVLEN          (0x4)

void hal_ll_uart_close( handle_t *handle ) {
    low_level_handle = hal_ll_uart_get_handle;
    hal_ll_uart_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_uart_get_module_state_address );

    if( NULL != low_level_handle->hal_ll_uart_handle ) {
        #if HAL_LL_POWER_REDUCTION
        hal_ll_uart_power_reduction_enable( hal_ll_uart_hw_specifics_map_local->module_index, false );
        #endif

        hal_ll_uart_alternate_functions_set_state( hal_ll_uart_hw_specifics_map_local, false );

        hal_ll_uart_irq_disable( handle, HAL_LL_UART_IRQ_RX );
        hal_ll_uart_irq_disable( handle, HAL_LL_UART_IRQ_TX );

        hal_ll_uart_clear_regs( hal_ll_uart_hw_specifics_map_local->base );

        // Power-down appropriate UART module via Power Reduction Register (if available).
        #if HAL_LL_POWER_REDUCTION
        hal_ll_uart_power_reduction_enable( hal_ll_uart_hw_specifics_map_local->module_index, true );
        #endif

        hal_ll_uart_hw_specifics_map_local->pins.tx_pin.pin_name = HAL_LL_PIN_NC;
        hal_ll_uart_hw_specifics_map_local->pins.rx_pin.pin_name = HAL_LL_PIN_NC;

        hal_ll_uart_hw_specifics_map_local->baud_rate.baud = 115200UL;
        hal_ll_uart_hw_specifics_map_local->baud_rate.real_baud = 0;

        irq_handler = NULL;
        objects[ hal_ll_uart_find_index( handle ) ] = NULL;

        low_level_handle->hal_ll_uart_handle = NULL;
        low_level_handle->hal_drv_uart_handle = NULL;

        low_level_handle->init_ll_state = false;
    }
}

void hal_ll_uart_irq_enable( handle_t *handle, hal_ll_uart_irq_t irq ) {
    hal_ll_uart_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_uart_get_module_state_address );

    switch ( irq ) {
        case HAL_LL_UART_IRQ_RX:
            __HAL_LL_UART_ENABLE_IT( hal_ll_uart_hw_specifics_map_local->module_index, HAL_LL_UART_CTRLA_RXCINTLVL_SHIFT );
            break;

        case HAL_LL_UART_IRQ_TX:
            __HAL_LL_UART_ENABLE_IT( hal_ll_uart_hw_specifics_map_local->module_index, HAL_LL_UART_CTRLA_TXCINTLVL_SHIFT );
            break;

        default:
            break;
    }

}

void hal_ll_uart_irq_disable( handle_t *handle, hal_ll_uart_irq_t irq ) {
    hal_ll_uart_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_uart_get_module_state_address );

    switch ( irq ) {
        case HAL_LL_UART_IRQ_RX:
            __HAL_LL_UART_DISABLE_IT( hal_ll_uart_hw_specifics_map_local->module_index, HAL_LL_UART_CTRLA_RXCINTLVL_SHIFT );
            break;

        case HAL_LL_UART_IRQ_TX:
            __HAL_LL_UART_DISABLE_IT( hal_ll_uart_hw_specifics_map_local->module_index, HAL_LL_UART_CTRLA_TXCINTLVL_SHIFT );
            break;

        default:
            break;
    }
}

uint8_t hal_ll_uart_read( handle_t *handle ) {
    const hal_ll_uart_base_handle_t *hal_ll_hw_reg = hal_ll_uart_get_base_handle;
    return read_reg( hal_ll_hw_reg->dat );
}

static void hal_ll_uart_alternate_functions_set_state( hal_ll_uart_hw_specifics_map_t *map, bool hal_ll_state ) {
    hal_ll_gpio_pin_t local_pin;
    if (( HAL_LL_PIN_NC != map->pins.tx_pin.pin_name ) && ( HAL_LL_PIN_NC != map->pins.rx_pin.pin_name )) {
        if ( hal_ll_state) {
            hal_ll_gpio_configure_pin( &local_pin, map->pins.tx_pin.pin_name, HAL_LL_GPIO_DIGITAL_OUTPUT );
            hal_ll_gpio_configure_pin( &local_pin, map->pins.rx_pin.pin_name, HAL_LL_GPIO_DIGITAL_INPUT );
        } else {
            hal_ll_gpio_configure_pin( &local_pin, map->pins.tx_pin.pin_name, HAL_LL_GPIO_DIGITAL_INPUT );
            hal_ll_gpio_configure_pin( &local_pin, map->pins.rx_pin.pin_name, HAL_LL_GPIO_DIGITAL_INPUT );
        }
    }
    #if ( HAL_LL_MODULE_REMAP == true )
    if( true == map->alternate ) {
        #ifdef UART_MODULE_C0
        if( hal_ll_uart_module_num( UART_MODULE_C0 ) == map->module_index ) {
            set_reg_bit( PORTC_REMAP_REG_ADDRESS, HAL_LL_USART0_REMAP_BIT );
        }
        #endif
        #ifdef UART_MODULE_D0
        if( hal_ll_uart_module_num( UART_MODULE_D0 ) == map->module_index ) {
            set_reg_bit( PORTD_REMAP_REG_ADDRESS, HAL_LL_USART0_REMAP_BIT );
        }
        #endif
        #ifdef UART_MODULE_E0
        if( hal_ll_uart_module_num( UART_MODULE_E0 ) == map->module_index ) {
            set_reg_bit( PORTE_REMAP_REG_ADDRESS, HAL_LL_USART0_REMAP_BIT );
        }
        #endif
        #ifdef UART_MODULE_F0
        if( hal_ll_uart_module_num( UART_MODULE_F0 ) == map->module_index ) {
            set_reg_bit( PORTF_REMAP_REG_ADDRESS, HAL_LL_USART0_REMAP_BIT );
        }
        #endif
    }
    #endif
}

static void hal_ll_uart_set_baud_bare_metal( hal_ll_uart_hw_specifics_map_t *map ) {
    const hal_ll_uart_base_handle_t *hal_ll_hw_reg = hal_ll_uart_get_base_struct( map->base );
    static uint32_t peripheral_clock = Get_Fosc_kHz()*1000;
    volatile int8_t bscale, i, baud_mul;
    volatile int16_t bsel;
    volatile float real_baud, baud_rate_error;

    baud_mul = ( check_reg_bit( hal_ll_hw_reg->ctrlb, HAL_LL_UART_CTRLB_CLK2X_BIT )) ? HAL_LL_UART_BAUD_RATE_MUL_CLK2X : HAL_LL_UART_BAUD_RATE_MUL;

    for( i = -7; i < 8; i++) {
        if( i < 0 ) {
            bsel =  ( pow( 2, i * (-1) ) * (( (float)peripheral_clock / ( map->baud_rate.baud * baud_mul )) - 1 ));
            real_baud = (float)peripheral_clock / ( baud_mul*( pow( 2, i ) * bsel + 1 ));
        } else {
            bsel = pow( 2, i * (-1) ) * ( (float)peripheral_clock / ( map->baud_rate.baud * baud_mul )) - 1;
            real_baud = peripheral_clock / (float)( pow( 2, i ) * baud_mul * ( bsel + 1 ));
        }
        if (( 4095 < bsel ) || ( 0 > bsel ) || ( 0 == bsel ) && ( 0 != i )) continue;
        baud_rate_error = hal_ll_uart_get_baud_error( real_baud, map->baud_rate.baud );
        if( (float)1.0 > baud_rate_error ) break;
    }

    if( baud_rate_error > HAL_LL_UART_ACCEPTABLE_ERROR ) {
        map->baud_rate.real_baud = (uint32_t)baud_rate_error;
    } else {
        map->baud_rate.real_baud = real_baud;
        bscale = i;
        write_reg( hal_ll_hw_reg->baudctrla, bsel );
        write_reg( hal_ll_hw_reg->baudctrlb, ( bsel >> 8 ) | ( bscale << 4 ));
    }
}

static void hal_ll_uart_set_data_bits_bare_metal( hal_ll_uart_hw_specifics_map_t *map ) {
    const hal_ll_uart_base_handle_t *hal_ll_hw_reg = hal_ll_uart_get_base_struct( map->base );

    switch( map->data_bit ) {
        // NOTE: HAL_LL_UART_DATA_BITS_5 and HAL_LL_UART_DATA_BITS_6 are not defined
        /*
        case HAL_LL_UART_DATA_BITS_5:
            set_reg_bits( hal_ll_hw_reg->ctrlc, HAL_LL_UART_CHSIZE_5BIT );
            break;
        case HAL_LL_UART_DATA_BITS_6:
            set_reg_bits( hal_ll_hw_reg->ctrlc, HAL_LL_UART_CHSIZE_6BIT );
            break;
        */
        case HAL_LL_UART_DATA_BITS_7:
            set_reg_bits( hal_ll_hw_reg->ctrlc, HAL_LL_UART_CHSIZE_7BIT );
            break;
        case HAL_LL_UART_DATA_BITS_8:
            set_reg_bits( hal_ll_hw_reg->ctrlc, HAL_LL_UART_CHSIZE_8BIT );
            break;
        case HAL_LL_UART_DATA_BITS_9:
            set_reg_bits( hal_ll_hw_reg->ctrlc, HAL_LL_UART_CHSIZE_9BIT );
            break;

        default:
            break;
    }
}

static void hal_ll_uart_hw_init( hal_ll_uart_hw_specifics_map_t *map ) {
    const hal_ll_uart_base_handle_t *hal_ll_hw_reg = hal_ll_uart_get_base_struct( map->base );

    hal_ll_uart_clear_regs( map->base );

    // Power-down appropriate UART module via Power Reduction Register (if available).
    #if HAL_LL_POWER_REDUCTION
    hal_ll_uart_power_reduction_enable( map->module_index, false );
    #endif

    hal_ll_uart_set_baud_bare_metal( map );

    hal_ll_uart_set_parity_bare_metal( map );

    hal_ll_uart_set_data_bits_bare_metal( map );

    hal_ll_uart_set_stop_bits_bare_metal( map );

    write_reg( HAL_LL_PMIC_CTRL_REG_ADDRESS, HAL_LL_PMIC_CTRL_HILVLEN | HAL_LL_PMIC_CTRL_MEDLVLEN | HAL_LL_PMIC_CTRL_LOLVLEN );

    hal_ll_uart_set_transmitter( map->base, HAL_LL_UART_ENABLE );

    hal_ll_uart_set_receiver( map->base, HAL_LL_UART_ENABLE );

    /*
     * In order for UART Transmit interrupt to be triggered, initial dummy data write is required.
     * According to documentation:
     * "Data transfer is initiated by writing to the DATA register.
     *  This is the case for both sending and receiving data, since the transmitter controls the transfer clock."
     */
    write_reg( hal_ll_hw_reg->dat, HAL_LL_UART_TRIGGER_INTERRUPT );
}
